--- a/index.html
+++ b/index.html
@@ -80,8 +80,7 @@
                         <div class="col-md-1"></div>
                         <div class="col-md-6 col-md-offset-2">
                           <h2 class="intro-text back-intro"> SITE EM CONSTRUÇÃO</h2>
-                          <p class="intro-text back-intro">Aqui está disponível toda minha tragetória
-                            <br>Acadêmica e Profissional.</p>
+                          <p class="intro-text back-intro">Aqui estará disponível toda minha tragetória.</p>
                           <a href="#about" class="back-intro btn btn-circle page-scroll">
                               <i class="fa fa-angle-double-down animated"></i>
                           </a>
@@ -99,9 +98,10 @@
             <div class="col-lg-1"></div>
             <div class="col-lg-10">
                 <h2>Sobre</h2>
-                <h4>Assessor de Projetos e Estudante de Ciência da Computação</h4>
-                <p>Bacharelado em <a href="http://www.inf.ufpr.br/bcc/">Ciência da Computação</a> - Universidade Federal do Paraná (4º Período)</p>
-                <p>Assessor de projetos na <a href="http://ecomp.co">ECOMP</a> - Empresa Júnior de Informática da UFPR</p>
+                <h4>Desenvolvedor Backend e Estudante de Ciência da Computação</h4>
+                <p>Bacharelado em <a href="http://www.inf.ufpr.br/bcc/">Ciência da Computação</a> - Universidade Federal do Paraná (7º Período)</p>
+                <p>Desenvolvedor Backend na <a href="https://www.c3sl.ufpr.br/">C3SL</a></p>
+                <p>Diretor de projetos 2017 na <a href="http://ecomp.co">ECOMP</a> - Empresa Júnior de Informática da UFPR</p>
                 <p>Técnico em Informática - Etec Prof. Dr. Antônio Eufrásio de Toledo</p>
                 <p>Técnico em Marketing - Etec Prof. Adolpho Arruda Mello</p>
             </div>
@@ -116,6 +116,7 @@
                 <div class="col-lg-8 col-lg-offset-2">
                     <h2>Projetos</h2>
                     <p>Descrição dos projetos na qual fiz parte.</p>
+                    <p><a href="https://dadoseducacionais.c3sl.ufpr.br">Laboratório de Dados Educacionais</a></p>
                     <a href="#" class="btn btn-default btn-lg">Visualizar todos</a>
                 </div>
             </div>
@@ -127,7 +128,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contato</h2>
-                <p>Sinta se avontade para entrar em contato</p>
+                <p>Sinta-se avontade para entrar em contato</p>
                 <p><a href="mailto:hamer.iboshi@gmail.com">hamer.iboshi@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
@@ -149,7 +150,7 @@
     <footer class="footer-style">
         <div class="container text-center">
             <p>Copyright &copy; HAMER IBOSHI 2016</p>
-            <p>Atualizado em: 28-07-2016</p>
+            <p>Atualizado em: 31-10-2018</p>
         </div>
     </footer>
 
