--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
                 <h2>Contato</h2>
-                <p>Sinta-se avontade para entrar em contato</p>
+                <p>Sinta-se à vontade para entrar em contato =)</p>
                 <p><a href="mailto:hamer.iboshi@gmail.com">hamer.iboshi@gmail.com</a>
                 </p>
                 <ul class="list-inline banner-social-buttons">
